--- a/package.json
+++ b/package.json
@@ -9,6 +9,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.5"
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/vue": "^5.1.3",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tresjs/cientos": "^5.2.0",
+    "@tresjs/core": "^5.2.0",
+    "@tresjs/post-processing": "^3.1.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "astro": "^5.16.5",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwindcss": "^4.1.18",
+    "three": "^0.170.0",
+    "vue": "^3.5.25"
+  },
+  "devDependencies": {
+    "@types/three": "^0.170.0"
   }
 }
